fix: prevent page overflowing

--- a/src/styles/essence.scss
+++ b/src/styles/essence.scss
@@ -18,6 +18,7 @@
 
 html {
   color-scheme: light dark;
+  overflow-y: hidden;
 }
 
 ::selection {
